--- a/index.html
+++ b/index.html
@@ -3,28 +3,74 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Chromeos guides</title>
+  <title>Chromebook Guides</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <h1>Unblocked Guides</h1>
-    <p>Your source for everthing unblocked.</p>
+    <h1>Chromebook Guides</h1>
+    <p>Unlock the full power of your Chromebook — tips, tricks, and bypass guides.</p>
     <nav>
       <ul>
-        <li><a href="#games">Guides</a></li>
-        <li><a href="#browsers">Apps</a></li>
+        <li><a href="#setup">Setup</a></li>
+        <li><a href="#apps">Apps</a></li>
+        <li><a href="#bypass">Bypass</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <section id="games">
-      <h2>🎮 Unblock Games</h2>
+    <section id="setup">
+      <h2>⚙️ Chromebook Setup & Tweaks</h2>
       <div class="guides">
         <article>
-          <h3>How to get any app on chomeos 2025</h3>
-          <p>Use the terminal.</p>
+          <h3>Enable Linux (Beta) on Chromebook</h3>
+          <p>Run Linux apps and terminals for more advanced features.</p>
           <a href="#">Read Guide</a>
         </article>
-  
+        <article>
+          <h3>Developer Mode: Pros and Cons</h3>
+          <p>How to enable it and what risks you should know.</p>
+          <a href="#">Read Guide</a>
+        </article>
+      </div>
+    </section>
+
+    <section id="apps">
+      <h2>📲 Install More Apps</h2>
+      <div class="guides">
+        <article>
+          <h3>Install Android APKs Without Google Play</h3>
+          <p>Sideload apps directly using ADB in Linux or Developer Mode.</p>
+          <a href="#">Read Guide</a>
+        </article>
+        <article>
+          <h3>Run Windows Apps on Chromebook</h3>
+          <p>Use Wine or CrossOver to run basic Windows programs.</p>
+          <a href="#">Read Guide</a>
+        </article>
+      </div>
+    </section>
+
+    <section id="bypass">
+      <h2>🔐 Bypass Restrictions</h2>
+      <div class="guides">
+        <article>
+          <h3>Unblock Websites Using Web Proxies</h3>
+          <p>Safe methods to use browser-based proxies without detection.</p>
+          <a href="#">Read Guide</a>
+        </article>
+        <article>
+          <h3>Change DNS on Chromebook</h3>
+          <p>Switch to custom DNS like Cloudflare or Google for better access.</p>
+          <a href="#">Read Guide</a>
+        </article>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Shakla. Learn. Play. Use responsibly.</p>
+  </footer>
+</body>
+</html>
