--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <article>
           <h3>Developer Mode: Pros and Cons</h3>
           <p>How to enable it and what risks you should know.</p>
-          <a href="#">Read Guide</a>
+          <a href="Linuxcros.html">Read Guide</a>
         </article>
       </div>
     </section>
